spade-tests/src/snapshots/spade_tests__hir_lowering__tests__is_a_type_bool.snap
---
source: spade-tests/src/hir_lowering.rs
---
fn f() -> bool {
    let a = bool;
    true
}


error: Type bool is used as a value
  ┌─ testinput:2:13
  │
2 │     let a = bool;
  │             ^^^^ bool is a type
